--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: legacy_gantt_chart
 description: A flexible and performant Gantt chart widget for Flutter. Supports interactive drag-and-drop, resizing, dynamic data loading, and extensive theming.
-version: 2.8.3
+version: 2.8.4
 license: MIT
 homepage: https://github.com/barneysspeedshop/legacy_gantt_chart
 repository: https://github.com/barneysspeedshop/legacy_gantt_chart
@@ -21,7 +21,7 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.20.2
-  provider: ^6.1.2
+  provider: ^6.1.5+1
   legacy_timeline_scrubber: ^2.0.0
 
 dev_dependencies:
