--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   collection: ^1.19.1
+  legacy_tree_grid: ^0.7.0
 
 dev_dependencies:
   flutter_test:
