--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ dependencies:
   intl: ^0.20.2
   provider: ^6.1.5+1
   legacy_timeline_scrubber: ^2.0.0
+  shelf: ^1.4.2
+  shelf_router: ^1.1.4
+  shelf_web_socket: ^3.0.0
+  web_socket_channel: ^3.0.3
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
