--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -44,5 +44,11 @@ jobs:
       # Your project will need to have tests in test/ and a dependency on
       # package:test for this step to succeed. Note that Flutter projects will
       # want to change this to 'flutter test'.
-      - name: Run tests
-        run: flutter test example/test/
+      - name: Run package tests
+        run: flutter test
+
+      - name: Run example tests
+        run: |
+          cd example
+          flutter pub get
+          flutter test
