--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -27,11 +27,15 @@ dependencies:
   path: ^1.9.1
   sqflite_common_ffi_web: ^1.1.0
   web_socket_channel: ^3.0.3
+  http: ^1.6.0
+  synchronized: ^3.3.0+3
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  stream_channel: ^2.1.4
 
 flutter:
   uses-material-design: true
