--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: legacy_gantt_chart
 description: A flexible and performant Gantt chart widget for Flutter. Supports interactive drag-and-drop, resizing, dynamic data loading, and extensive theming.
-version: 4.0.0-CRDT.alpha.8
+version: 4.0.0-CRDT.alpha.9
 license: MIT
 homepage: https://github.com/barneysspeedshop/legacy_gantt_chart
 repository: https://github.com/barneysspeedshop/legacy_gantt_chart
@@ -23,6 +23,7 @@ dependencies:
   intl: ^0.20.2
   provider: ^6.1.5+1
   legacy_timeline_scrubber: ^2.0.0
+  sqlite_crdt: ^3.0.0
   shelf: ^1.4.2
   shelf_router: ^1.1.4
   shelf_web_socket: ^3.0.0
@@ -33,6 +34,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  stream_channel: ^2.1.4
 
 screenshots:
   - description: 'Legacy Gantt Chart - screenshot 1'
