--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: legacy_gantt_chart
 description: A flexible and performant Gantt chart widget for Flutter. Supports interactive drag-and-drop, resizing, dynamic data loading, and extensive theming.
-version: 4.0.1
+version: 4.0.2
 license: MIT
 homepage: https://github.com/barneysspeedshop/legacy_gantt_chart
 repository: https://github.com/barneysspeedshop/legacy_gantt_chart
@@ -37,6 +37,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^6.0.0
   stream_channel: ^2.1.4
+  async: ^2.13.0
 
 
 screenshots:
