--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^1.6.0
   synchronized: ^3.4.0
   sqflite_common_ffi: ^2.4.0
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
