--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -36,6 +36,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
   stream_channel: ^2.1.4
+  mocktail: ^1.0.4
 
 flutter:
   uses-material-design: true
