--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: legacy_gantt_chart
 description: A flexible and performant Gantt chart widget for Flutter. Supports interactive drag-and-drop, resizing, dynamic data loading, and extensive theming.
-version: 5.0.0-alpha.9
+version: 5.0.0
 license: MIT
 homepage: https://github.com/barneysspeedshop/legacy_gantt_chart
 repository: https://github.com/barneysspeedshop/legacy_gantt_chart
@@ -39,6 +39,8 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   stream_channel: ^2.1.4
   async: ^2.13.0
+  mocktail: ^1.0.4
+  path_provider: ^2.1.0
 
 
 screenshots:
