--- a/.github/workflows/deploy_example.yml
+++ b/.github/workflows/deploy_example.yml
@@ -34,27 +34,10 @@ jobs:
         run: |
           cd example
           flutter pub get
-          
-          # Create staging directory
-          mkdir -p deployment_staging
-          
-          # Build Standard (HTML/JS)
-          rm -rf build
-          flutter build web --release --base-href /legacy_gantt_chart/ --pwa-strategy=none
-          cp -r build/web/* deployment_staging/
-          
-          # Build Wasm
-          rm -rf build
-          flutter build web --wasm --release --base-href /legacy_gantt_chart/wasm/ --pwa-strategy=none
-          mkdir -p deployment_staging/wasm
-          cp -r build/web/* deployment_staging/wasm/
-          
-          # Debug: List contents of staging area
-          echo "Listing deployment staging area:"
-          ls -R deployment_staging
+          flutter build web --release --base-href /legacy_gantt_chart/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./example/deployment_staging
+          publish_dir: ./example/build/web
