--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   synchronized: ^3.4.0
   sqflite_common_ffi: ^2.4.0
   collection: ^1.19.1
+  crypto: ^3.0.7
 
 dev_dependencies:
   flutter_test:
