--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -20,7 +20,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   collection: ^1.19.1
-  legacy_tree_grid: ^0.11.0
+  csv: ^6.0.0
+  file_selector: ^1.0.3
+  legacy_tree_grid:
+    path: ../../legacy_tree_grid
   sqlite_crdt: ^3.0.0
   uuid: ^4.0.0
   path_provider: ^2.1.0
