--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -22,8 +22,7 @@ dependencies:
   collection: ^1.19.1
   csv: ^6.0.0
   file_selector: ^1.0.3
-  legacy_tree_grid:
-    path: ../../legacy_tree_grid
+  legacy_tree_grid: 0.12.0
   sqlite_crdt: ^3.0.0
   uuid: ^4.0.0
   path_provider: ^2.1.0
